#
# Copyright (C) 2011-2012 David Bigagli
#

#include $(top_srcdir)/common.mk

#
# Copyright (C) 2012 Claudio Luck
#
# contencts of common.mk
AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\"


SUBDIRS = lsf docs scripts

# MISSING_FILES = aclocal.m4
ACLOCAL_AMFLAGS=-I m4 --install

# MAINTAINERCLEANFILES = $(MISSING_FILES) 

