# George Marselis <george@marsel.is>
#
AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\"

# bin_PROGRAMS = pimd limd eauthd resd mbatchd sbatchd niosd badmin bbottom bcheckpoint beligible bhc bhist bhosts bjobs bkill bmgroup bmig bmigrate bmigrategroup bmod bmodify bmove bparams bpeek bqc bqueues brequeue brestart bresume brun bstop bsub bswitch btop bugroup busers lsacct lsaddhost lsadm lseligible lshosts lsid lsinfo lsload lsloadadj lsmon lsplace lsrcp lsrmhost lsrun 


SUBDIRS = po lsf docs scripts

# MISSING_FILES = aclocal.m4
ACLOCAL_AMFLAGS=-I m4 --install

# MAINTAINERCLEANFILES = $(MISSING_FILES) 


EXTRA_DIST = build-aux/config.rpath
