# Added by George Marselis <george@marsel.is
#
# stub Makefile.am, while deciding the document format
#
# once we get here, this makefile should be producing formated man/info pages, html or pdf howtos

# AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\" -I$(top_srcdir)/lsf/include -I$(top_srcdir)/config.h

SUBDIRS = examples man 

bin_PROGRAMS = stub

stub_SOURCES = stub.c

