#
# Copyright (C) 2011-2012 David Bigagli
#

# include $(top_srcdir)/common.mk
# contencts of common.mk
AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\" -I../

#INCLUDES = -I../

noinst_LIBRARIES = liblsfint.a

liblsfint_a_SOURCES = admin.c bitset.c callex.c cmdtime.c conf.c \
	daemon.c jidx.c link.c list.c list2.c listset.c lsftcl.c misc.c \
	resourcecmd.c resreq.c set.c testbitset.c userok.c window.c
