#
# Copyright (C) 2011 David Bigagli
#

lib_LIBRARIES = liblsf.a

liblsf_a_SOURCES = comm.c conf.c debug.c err.c groups.c hc.c \
	hosts.c init.c jobs.c log.c mig.c misc.c modify.c move.c \
	msg.c params.c peek.c qc.c queues.c reason.c reconfig.c \
	resource.c rexecv.c sig.c signals.c spool.c sub.c switch.c \
	users.c xdr.c

etags:
	etags ../*.h *.[hc] ../intlib/*.[hc] ../lim/*.[hc] \
	../res/*.[hc] ../lstools/*.[hc]
