#
# Copyright (C) 2011-2012 David Bigagli
#

man_MANS = bbot.1 bchkpnt.1 bhosts.1 bjobs.1 bkill.1 bmgroup.1 bmig.1 bmod.1 bparams.1 bpeek.1 bqueues.1 brequeue.1 brestart.1 bresume.1 bstop.1 bsub.1 bswitch.1 btop.1 bugroup.1 busers.1 lsacct.1 lsaddhost.1 lseligible.1 lsfbase.1 lsfbatch.1 lsfintro.1 lshosts.1 lsid.1 lsinfo.1 lsload.1 lsloadadj.1 lsmon.1 lsplace.1 lsrcp.1 lsrmhost.1

EXTRA_DIST = $(man_MANS)

